@@ -1,2 +1,3 @@
 Makefile
 wtest
+.libs
