@@ -2,6 +2,7 @@ changes since wmaker 0.53.0:
 ............................
 
 - added balloon help
+- fixed a bug with setting initial path in browsers.
 
 changes since wmaker 0.52.0:
 ............................
